src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__list_iter_strings.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
// Iteration over different types
let list = ["hello", "world", "test"]
let iter = list_iter(list)

assert_eq(iter(), "hello")
assert_eq(iter(), "world")
assert_eq(iter(), "test")
assert_eq(iter(), nil)

OK
Nil
