src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__list_non_empty.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
[0, 1, 2]
}

OK
[Int(0), Int(1), Int(2)]
