src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__list_use.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = [0, 1, 2]
v[0] + v[1] + v[2]


OK
Int(3)
