src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__list_use_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = [100]
let i = 0
v[i]



OK
Int(100)
