src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__list_use_var_bad_idx.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = [100]
let k = "a"
v[k]

ERROR
value is not a valid array index
3 |  v[k]
  |   ^^^


DISASM:

.fn @main
  params 0
  stack 3
  .locals
    v = r1
    k = r2
  .code
  0  llist r1, 1
  1  lsmi r2, 100
  2  sidxn r1, 0, r2
  3  lstr r2, "a"
  4  lidx r0, r1, r2
  5  ret
