src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__logical_expr_or.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let a = 0
let b = 1

a or b
}

OK
Int(1)
