src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__loop_break.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = 0
loop {
  v = 1
  break
}
v

OK
Int(1)
