src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__loop_counter.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = 0
loop {
  if v == 10 { break }
  v += 1
}
v


OK
Int(10)
